Add ad integration and update HTML structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 
 <title>Join Telegram Earning Group | Online Tasks & Income</title>
 
+    <script>
+  atOptions = {
+    'key' : '205c59fe8c435b7333c2365cd0914b62',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
+
 <meta name="description" content="Join our Telegram earning group to get simple online tasks and income opportunities. Learn about Adsterra advertising and start earning today.">
 <meta name="keywords" content="telegram earning group, online earning, adsterra, make money online, CPA marketing, telegram tasks">
 <meta name="author" content="Task Earn India">
@@ -71,6 +82,17 @@ button {
 <main class="container">
 
 <section class="box">
+
+    <script>
+  atOptions = {
+    'key' : '205c59fe8c435b7333c2365cd0914b62',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
 
 <center>
 <p><strong>Click continue to support us and join our Telegram earning community.</strong></p>
@@ -178,3 +200,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
