--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
 
 <title>Join Telegram Earning Group | Online Tasks & Income</title>
 
-    <script>
-  atOptions = {
-    'key' : '205c59fe8c435b7333c2365cd0914b62',
-    'format' : 'iframe',
-    'height' : 250,
-    'width' : 300,
-    'params' : {}
-  };
-</script>
-<script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
+<script src="https://pl28564083.effectivegatecpm.com/ec/fc/79/ecfc7938952e197bb7abdedc8c61da19.js"></script>
 
 <meta name="description" content="Join our Telegram earning group to get simple online tasks and income opportunities. Learn about Adsterra advertising and start earning today.">
 <meta name="keywords" content="telegram earning group, online earning, adsterra, make money online, CPA marketing, telegram tasks">
@@ -82,17 +73,6 @@ button {
 <main class="container">
 
 <section class="box">
-
-    <script>
-  atOptions = {
-    'key' : '205c59fe8c435b7333c2365cd0914b62',
-    'format' : 'iframe',
-    'height' : 250,
-    'width' : 300,
-    'params' : {}
-  };
-</script>
-<script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
 
 <center>
 <p><strong>Click continue to support us and join our Telegram earning community.</strong></p>
@@ -164,6 +144,17 @@ Adsterra is a global online advertising network that helps website owners and pu
 
 </section>
 
+    <script>
+  atOptions = {
+    'key' : '205c59fe8c435b7333c2365cd0914b62',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
+
 <section class="box">
 <h2>Start Earning Smarter With Adsterra</h2>
 <a target="_blank" rel="noopener noreferrer" href="https://adsterra.com">
@@ -200,4 +191,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
