--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 
 <title>Join Telegram Earning Group | Online Tasks & Income</title>
 
+      <script>
+  atOptions = {
+    'key' : '205c59fe8c435b7333c2365cd0914b62',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
+
+
 
 
 <meta name="description" content="Join our Telegram earning group to get simple online tasks and income opportunities. Learn about Adsterra advertising and start earning today.">
@@ -193,6 +205,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
