--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <title>Join Telegram Earning Group | Online Tasks & Income</title>
 
+         <script src="https://pl28564083.effectivegatecpm.com/ec/fc/79/ecfc7938952e197bb7abdedc8c61da19.js"></script>
+
       <script>
   atOptions = {
     'key' : '205c59fe8c435b7333c2365cd0914b62',
@@ -104,6 +106,17 @@ Adsterra is a global online advertising network that helps website owners and pu
 <li>Telegram traffic users</li>
 <li>App developers</li>
 </ul>
+        <script>
+  atOptions = {
+    'key' : '205c59fe8c435b7333c2365cd0914b62',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
+
 
 <h2>How Adsterra works</h2>
 <ol>
@@ -205,6 +218,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
