--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Join Telegram Earning Group | Online Tasks & Income</title>
+<title>Task To Earn</title>
 
          <script src="https://pl28564083.effectivegatecpm.com/ec/fc/79/ecfc7938952e197bb7abdedc8c61da19.js"></script>
 
@@ -218,6 +218,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
