--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@ Adsterra is a global online advertising network that helps website owners and pu
 <script src="https://www.highperformanceformat.com/205c59fe8c435b7333c2365cd0914b62/invoke.js"></script>
 
 
+
+       <script async="async" data-cfasync="false" src="https://pl28592607.effectivegatecpm.com/0cf12faecc3c24b451729848dc4209d3/invoke.js"></script>
+<div id="container-0cf12faecc3c24b451729848dc4209d3"></div>  
+
+
 <h2>How Adsterra works</h2>
 <ol>
 <li>Sign up as a publisher</li>
@@ -145,8 +150,11 @@ Adsterra is a global online advertising network that helps website owners and pu
 <li>Automatically shows high-paying ads</li>
 <li>Works without a website</li>
 <li>Perfect for Telegram and WhatsApp traffic</li>
+
 </ul>
 
+         <script async="async" data-cfasync="false" src="https://pl28592607.effectivegatecpm.com/0cf12faecc3c24b451729848dc4209d3/invoke.js"></script>
+<div id="container-0cf12faecc3c24b451729848dc4209d3"></div>
 <h2>Approval process</h2>
 <ul>
 <li>Fast and easy approval</li>
@@ -154,6 +162,11 @@ Adsterra is a global online advertising network that helps website owners and pu
 <li>Works for new websites</li>
 </ul>
 
+
+
+<script async="async" data-cfasync="false" src="https://pl28592607.effectivegatecpm.com/0cf12faecc3c24b451729848dc4209d3/invoke.js"></script>
+<div id="container-0cf12faecc3c24b451729848dc4209d3"></div>
+         
 <h2>Advantages</h2>
 <ul>
 <li>Easy to join</li>
@@ -218,10 +231,11 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-    <script src="https://pl28564083.effectivegatecpm.com/ec/fc/79/ecfc7938952e197bb7abdedc8c61da19.js"></script>
+ <script src="https://pl28592605.effectivegatecpm.com/87/c6/e1/87c6e1f83917c89b70dcb73aebabf2b0.js"></script>
 
 </body>
 </html>
+
 
 
 
